feat: add openapi first bindings + logger
